--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-/* @custom-variant dark (html.dark &); */
 @import "tailwindcss";
 
 html {
@@ -10,7 +9,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 6px;
+    width: 10px;
 }
 
 ::-webkit-scrollbar-track {
@@ -18,21 +17,21 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #c084fc;
+    background: #c8c8c8;
     border-radius: 3px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #9333ea;
+    background: #f9f8f5;
 }
 
 ::selection {
-    background: #e9d5ff;
-    color: #334155;
+    background: #626161;
+    color: #ffffff;
 }
 
 ::-moz-selection {
-    background: #e9d5ff;
+    background: #e0e0e0;
     color: #334155;
 }
 
